# mandlore

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.cursor/rules/: backtesting_engine_overview.mdc
include/core/: Account.h  Bar.h  Metrics.h  OrderRequest.h  Position.h  Trade.h
include/data/: Aggregator.h  BinancePriceSource.h  CsvPriceSource.h  PriceManager.h  PriceSource.h  PythPriceSource.h
include/engine/: BacktestManager.h  ExecutionEngine.h  ThreadPool.h
include/strategy/: IStrategy.h  StrategyAction.h  StrategyConfig.h  StrategyFactory.h
src/core/: Account.cpp
src/data/: Aggregator.cpp  BinancePriceSource.cpp  CsvPriceSource.cpp  PriceManager.cpp  PythPriceSource.cpp
src/strategy/: StrategyFactory.cpp
strategies/buy_and_hold/: BuyAndHoldStrategy.cpp  BuyAndHoldStrategy.h  config.json
strategies/sma_cross/: SmaCrossStrategy.cpp  SmaCrossStrategy.h  config.json
tests/: CMakeLists.txt  test_core.cpp  test_data.cpp  test_threadpool.cpp
